<resources>
    <string name="app_name">Weather Travel Planner</string>
    <string name="add_trip">Add Trip</string>
    <string name="trip_name">Trip Name</string>
    <string name="city">City</string>
    <string name="save_trip">Save Trip</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="notes">Notes (optional)</string>
    <string name="delete_trip">Delete Trip</string>
    <string name="current_weather">Current Weather</string>
    <string name="view_on_map">View on Map</string>
    <string name="weather_icon">Weather Icon</string>
    <string name="edit_trip">Edit Trip</string>
</resources>